--- a/public/styles.css
+++ b/public/styles.css
@@ -46,3 +46,18 @@ header {
     gap: 8px;
 }
 
+.products-sale{
+    width: 100%;
+    min-width: min-content;
+    padding: 10px 30px 10px 30px;
+}
+.products-sale-list{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    min-width: min-content;
+    padding: 10px 10px 5px 10px;
+    border: #ccc solid;
+
+}
+
